# kafkacow

./: .gitignore  .gitmodules  .talismanrc  CMakeLists.txt  ConnectKafka.cpp  ConnectKafka.h  ConsumerPrepare.cpp  ConsumerPrepare.h  Doxyfile.in  Jenkinsfile  PULL_REQUEST_TEMPLATE.md  README.md  RequestHandler.cpp  RequestHandler.h  codecov.yml  conanfile.txt  createAppImage.sh  main.cpp
AppImageResources/: kafkacow.desktop
cmake/: CodeCoverage.cmake  conan.cmake
src/: ArgumentsException.h  CMakeLists.txt  ConnectKafka.cpp  ConnectKafka.h  ConnectKafkaFake.cpp  ConnectKafkaFake.h  ConnectKafkaFakeTestClass.cpp  ConnectKafkaFakeTestClass.h  ConnectKafkaInterface.h  ConnectKafkaParentClass.h  CustomExceptions.h  Filesystem.h  FlatbuffersTranslator.cpp  FlatbuffersTranslator.h  GetSchemaPath.cpp  GetSchemaPath.h  GraphicalInterface.cpp  GraphicalInterface.h  JSONPrinting.cpp  JSONPrinting.h  KafkaMessageMetadataStruct.h  Metadata.cpp  Metadata.h  OffsetsStruct.h  RequestHandler.cpp  RequestHandler.h  RequestHandlerFakeTestClass.cpp  RequestHandlerFakeTestClass.h  RequestHandlerInterface.h  RequestHandlerParentClass.h  SchemaPath.cpp  SchemaPath.h  TopicMetadataStruct.h  UpdateSchemas.cpp  UpdateSchemas.h  UserArgumentsStruct.h  main.cpp
src/Kafka/: Consumer.cpp  Consumer.h  ConsumerFactory.cpp  ConsumerFactory.h  ConsumerInterface.h  FakeConsumer.cpp  FakeConsumer.h  FakeProducer.cpp  FakeProducer.h  KafkaConfig.h  Message.h  MessageMetadataStruct.h  Producer.cpp  Producer.h  ProducerFactory.cpp  ProducerFactory.h  ProducerInterface.h
src/KafkaW/: Consumer.cpp  Consumer.h  ConsumerFactory.cpp  ConsumerFactory.h  ConsumerInterface.h  FakeConsumer.cpp  FakeConsumer.h  FakeProducer.cpp  FakeProducer.h  KafkaMessageMetadataStruct.h  Message.h  Producer.cpp  Producer.h  ProducerFactory.cpp  ProducerFactory.h  ProducerInterface.h
src/imgui/: imgui_demo.cpp
test/: CMakeLists.txt  ConnectKafkaFakeTestClass.cpp  ConnectKafkaFakeTestClass.h  ConnectKafkaParentClass.h  FlatbuffersTranslatorTest.cpp  JSONPrintingTest.cpp  MessageTest.cpp  RequestHandlerFakeTestClass.cpp  RequestHandlerFakeTestClass.h  RequestHandlerParentClass.h  RequestHandlerTest.cpp  SchemaPathForTest.cpp  SchemaPathForTest.h  UnitTests.cpp  f142_logdata_generated.h  fwdi_forwarder_internal_generated.h  gtest_main.cpp
